# mqlite

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.benchmarks/: REFERENCE_HARDWARE.md
.designs/vtmo/: api.md  data.md  integration.md  scale.md  security.md  ux.md
.github/workflows/: ci.yml
.omc/: id-index-tree-problem-statement.md
.plan-reviews/phase1-recon/: completeness.md  plan-review.md  risk.md  scope-creep.md  sequencing.md  testability.md
.plan-reviews/vtmo/: prd-align-round-1.md  prd-align-round-2.md  prd-align-round-3.md  review-round-1.md  review-round-2.md  review-round-3.md
.prd-reviews/mqlite-embedded-mongodb/: prd-draft.md  state.env
.prd-reviews/uxgxk/: ambiguity.md  feasibility.md  gaps.md  prd-review.md  requirements.md  scope.md  stakeholders.md
.runtime/: session_id
benches/: README.md  core.rs  durability_modes.rs  group_commit_lsn.rs  index_build.rs  payload_sizes.rs  phase5_memory_pressure.rs  phase5_multiwriter.rs  read_epoch_root_neutral.rs  reader_memory_pressure.rs  reopen.rs  same_collection_multiwriter.rs  writers_diff_ns.rs  writers_same_ns.rs
benches/common/: mod.rs
benches/perf/: perf_matrix.rs  run_baselines.py  sample_hot.py
docs/: COMPATIBILITY.md  CONCURRENCY.md  ERRORS.md  FILE-MANAGEMENT.md  IOT-DEPLOYMENT.md  JOURNAL-AUTO-CHECKPOINT-PLAN.md  MIGRATION.md  MVCC.md  PERFORMANCE.md  STORAGE-UPGRADE-PHASE-08-WT-JOURNAL-GROUP-COMMIT.md  TEST-DOUBLE-COOKBOOK.md  VERIFICATION.md  WIRE-SECURITY.md
docs/adr/: 0001-mvcc.md  0002-mwmr.md
docs/perf/: 2026-05-10-history-store-shard-audit.md  2026-05-10-mwmr-page-latch-handoff.md
docs/perf-baselines/: 2026-05-10-post-pr1.json  2026-05-10-post-pr1.md  2026-05-10-post-pr2.json  2026-05-10-post-pr2.md  2026-05-10-pre-r1-hot.md  2026-05-10-pre-r1.json  2026-05-10-pre-r1.md  2026-05-10-spike-bottleneck-diagnosis.md  2026-05-10-spike-partitioned-hot.md  2026-06-11-ryzen-7800x3d-windows-interval.json  SCHEMA.md  current-full-sync.json  current.json
docs/staged-work/: residual-close-quadratic-chain-migration.md  us-005-incremental-checkpoint.md
examples/: cli_demo.rs  index_benchmark.rs  index_explain_demo.rs  perf_axis.rs  perf_goal.rs  wire_server.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/key_encoder/: int_value  num_value
fuzz/corpus/query_evaluator/: empty_filter
fuzz/corpus/wire_protocol/: ismaster_opmsg  minimal_opmsg
fuzz/fuzz_targets/: bson_parser.rs  key_encoder.rs  logical_txn_decode.rs  logical_txn_recover.rs  query_evaluator.rs  try_skip_logical_txn.rs  wire_protocol.rs
fuzz/seeds/: generate.rs
proptest-regressions/storage/: btree_proptest.txt
scripts/: cck-loop-phase4.sh  cck-loop-phase5.sh  perf-goal-mqlite.sh  pre-commit-citations.sh  ralph-phase2.sh  ralph-phase3.sh  ralph-phase4.sh  ralph-phase5.sh  ralph-phase7.sh  ralph-phase8.sh  verify-phase8-cleanup.sh  verify_phase_citations.py
src/: bson.rs  bson_compat.rs  client.rs  client_tests.rs  collection.rs  compat_tests.rs  crash_recovery_public_api_tests.rs  crash_recovery_tests.rs  cursor.rs  database.rs  engine.rs  error.rs  index.rs  key_encoding.rs  key_encoding_tests.rs  lib.rs  options.rs  results.rs  storage_engine.rs  update_operators.rs  update_operators_tests.rs  validation.rs  wal_atomicity_tests.rs
src/client/: crash_cut_test_probe.rs  crud.rs  database.rs  handle.rs  inner.rs  inner_crud.rs  mod.rs  open.rs  path.rs  phase0_probe.rs  test_accessors.rs  tests.rs
src/collection/: mod.rs
src/journal/: append_sync_test_probe.rs  checkpoint_batch.rs  log_file.rs  log_file_tests.rs  log_manager.rs  logical_replay_test_probe.rs  metrics.rs  mod.rs  mod_tests.rs  phase7_us006_tests.rs  phase7_us011_tests.rs  recovery.rs  shm.rs
src/keys/: mod.rs  tests.rs
src/mvcc/: chain_snapshot.rs  deferred_free.rs  metrics.rs  mod.rs  read_view.rs  read_view_us001_tests.rs  registry.rs  timestamp.rs  transaction.rs  version.rs
src/query/: aggregate.rs  explain.rs  expr.rs  filter.rs  filter_tests.rs  mod.rs  planner.rs
src/storage/: allocator.rs  allocator_tests.rs  btree.rs  btree_phase4_us007_tests.rs  btree_proptest.rs  btree_store.rs  btree_tests.rs  btree_us005_tests.rs  btree_us006_tests.rs  btree_us017_tests.rs  buffer_pool.rs  buffer_pool_tests.rs  catalog.rs  catalog_tests.rs  crash_cut_test_probe.rs  engine.rs  file_io.rs  handle.rs  header.rs  header_us011_tests.rs  history_store.rs  history_store_tests.rs  history_store_us009_tests.rs  lock.rs  mod.rs  oid.rs  page.rs  paged_engine.rs  phase0_probe.rs  root_snapshot.rs  secondary_index.rs  secondary_index_tests.rs  structural_page_batch.rs  structural_page_batch_store_tests.rs  structural_page_batch_test_probe.rs  structural_page_batch_tests.rs  test_support.rs  txn_page_store.rs  txn_page_store_tests.rs  txn_page_store_us008_probe.rs  (+1 more)
src/tests/: validation.rs
src/update/: mod.rs  pipeline.rs  tests.rs
src/wal/: mod.rs  shm.rs  wal_file.rs
src/wire/: commands.rs  errors.rs  framing.rs  mod.rs  protocol.rs  server.rs  server_tests.rs
tests/: aggregate_api.rs  bugsuspect_mvcc_force_expire_sb_race.rs  catalog_dirty_flags.rs  citation_integrity.rs  close_checkpoint_bounded.rs  close_checkpoint_bounded_secondary.rs  collection_api.rs  crash_cut_matrix.rs  crash_harness.rs  crash_harness_smoke.rs  crash_injection_random.rs  engine_fatal_recovery.rs  error_display_variants.rs  error_phase3_variants.rs  expr_filter_api.rs  failpoint_crash_cuts.rs  force_expire_counter_tick.rs  force_expiry_pin_race.rs  header_dirty_without_catalog_rebuild.rs  history_cold_read_latency.rs  history_store_recursion.rs  hlc_recovery_110k.rs  index_build_recovery.rs  index_features_api.rs  lock_order_no_registry_under_partition.rs  logical_commit_sequence_crash.rs  loom_common.rs  modify_features_api.rs  mongosh_smoke.sh  multikey_tombstone_atomicity.rs  mvcc_e2e.rs  mwmr_crash_recovery.rs  mwmr_create_index.rs  mwmr_ddl_barriers.rs  mwmr_durability.rs  mwmr_durability_recovery_edges.rs  mwmr_edge_pr10.rs  mwmr_edge_pr6_7.rs  mwmr_edge_pr8.rs  mwmr_failure_edges.rs  (+61 more)
tests/jepsen/: .gitignore  (+5 more)
(+289 files in other folders)
