[package]
name = "mqlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Embedded MongoDB-compatible document store"
repository = "https://github.com/kyleparkinson/mqlite"
keywords = ["mongodb", "embedded", "document", "database", "sqlite"]
categories = ["database", "embedded"]

[features]
default = []
wire = ["dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]
# Exposes internal functions (eval_filter, etc.) for fuzz targets.
# Do NOT enable in production builds.
fuzz = ["dep:tempfile"]
# Exposes crash-cut probes and hidden state accessors for integration tests.
# Do NOT enable in production builds.
test-hooks = []
# Enables loom-based concurrency stress tests. Run with:
#   RUSTFLAGS="--cfg loom" cargo test --release --features loom-tests --test loom_common
loom-tests = []

[dependencies]
arc-swap = "1"
bson = { version = "2", features = ["serde_with"] }
dashmap = "6"
parking_lot = { version = "0.12", features = ["arc_lock"] }
regex = "1"
smallvec = "1"
thiserror = "1"
crc32c = "0.6.4"
serde = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# `loom` is pulled in as a regular dependency only when the caller passes
# `--cfg loom` (which activates the permutation-testing engine for MVCC
# concurrency primitives in `src/mvcc/*`). Under ordinary `cargo check` /
# `cargo test` builds the shim in those modules falls back to `std::sync`
# and `loom` is unused, so no dependency is imposed on downstream crates.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

# Optional: wire feature
[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.tokio-util]
version = "0.7"
optional = true

# Optional: tracing feature
[dependencies.tracing]
version = "0.1"
optional = true

# Optional: fuzz feature uses tempfile to synthesize tempdir-backed
# DBs from arbitrary fuzzed bytes (see `fuzz_logical_txn_recover`).
# Not pulled in for production builds.
[dependencies.tempfile]
version = "3"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
loom = "0.7"
proptest = "1"
serial_test = "3"

[[example]]
name = "wire_server"
required-features = ["wire"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "line-tables-only"
strip = "debuginfo"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true
lto = "thin"

[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "writers_same_ns"
harness = false

[[bench]]
name = "writers_diff_ns"
harness = false

[[bench]]
name = "payload_sizes"
harness = false

[[bench]]
name = "durability_modes"
harness = false

[[bench]]
name = "index_build"
harness = false

[[bench]]
name = "reopen"
harness = false

[[bench]]
name = "read_epoch_root_neutral"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unreachable = "warn"
needless_collect = "warn"
inefficient_to_string = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
