[package]
name = "mqlite-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bson = { version = "2", features = ["serde_with"] }
crc32c = "0.6.4"

[dependencies.mqlite]
path = ".."
features = ["fuzz"]

[[bin]]
name = "bson_parser"
path = "fuzz_targets/bson_parser.rs"
test = false
doc = false

# wire_protocol target temporarily disabled — the `wire` feature is broken on
# master (pre-existing visibility + tokio import issues, unrelated to Phase 0
# hardening). Re-enable by restoring features = ["wire", "fuzz"] after the
# wire feature is fixed.
# [[bin]]
# name = "wire_protocol"
# path = "fuzz_targets/wire_protocol.rs"
# test = false
# doc = false

[[bin]]
name = "query_evaluator"
path = "fuzz_targets/query_evaluator.rs"
test = false
doc = false

[[bin]]
name = "key_encoder"
path = "fuzz_targets/key_encoder.rs"
test = false
doc = false

# Phase 2 §9.2 / US-023 fuzz targets — exercise the LogicalTxnFrame
# decoder, the try_skip_logical_txn cursor contract, and end-to-end
# recovery. Seed corpus lives in fuzz/corpus/logical_txn_recovery/.

[[bin]]
name = "logical_txn_decode"
path = "fuzz_targets/logical_txn_decode.rs"
test = false
doc = false

[[bin]]
name = "logical_txn_recover"
path = "fuzz_targets/logical_txn_recover.rs"
test = false
doc = false

[[bin]]
name = "try_skip_logical_txn"
path = "fuzz_targets/try_skip_logical_txn.rs"
test = false
doc = false

[[bin]]
name = "generate_seeds"
path = "seeds/generate.rs"
test = false
doc = false

# Declare an isolated workspace so cargo-fuzz can invoke us with nightly
# without interfering with the parent workspace's stable toolchain.
[workspace]
members = ["."]
